# exchange-simulator

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.yml  exch-sim  optimzations.txt
include/: maker.hpp  market_price.hpp  metrics.hpp  orderbook.hpp  simulator.hpp  strong_types.hpp  trade.hpp  types.hpp
include/bots/: maker.hpp  taker.hpp  trade.hpp
include/core/: active_types.hpp  config.hpp  market_types.hpp  primitives.hpp  rng.hpp  settings.hpp
include/interface/: cli.hpp  printer.hpp  sim_builder.hpp  sim_info.hpp  validator.hpp
include/logging/: log_types.hpp  logger.hpp  npy.hpp
include/model/: sim_price.hpp
include/sim/: metrics.hpp  orderbook.hpp  sim_builder.hpp  sim_runner.hpp  simulator.hpp
src/: cli.cpp  main.cpp  orderbook.cpp  sim_runner.cpp
strategy/: pure_market_maker.hpp  strategy.hpp
tests/: test_maker.cpp  test_matching.cpp  test_price_models.cpp  test_sim_builder.cpp  test_simulator.cpp  test_simulator_run.cpp  test_strategy.cpp  test_taker.cpp
