cmake_minimum_required(VERSION 3.16)
project(ExchangeSimulator)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# ── ccache (speeds up clean/CI builds significantly) ────────────────────────
find_program(CCACHE_PROGRAM ccache)
if(CCACHE_PROGRAM)
    message(STATUS "ccache found: ${CCACHE_PROGRAM}")
    set(CMAKE_CXX_COMPILER_LAUNCHER ${CCACHE_PROGRAM})
else()
    message(STATUS "ccache not found - install it for faster rebuilds")
endif()

# ── Dependencies ─────────────────────────────────────────────────────────────
include(FetchContent)
FetchContent_Declare(
    CLI11
    GIT_REPOSITORY https://github.com/CLIUtils/CLI11.git
    GIT_TAG        v2.4.1
)
FetchContent_MakeAvailable(CLI11)

find_package(TBB REQUIRED)

# ── Shared include dirs ───────────────────────────────────────────────────────
set(CORE_INCLUDE_DIRS
    include/core
    include/bots
    include/strategy
    include/sim
    include/model
    include/interface
    include/logging
    ${CMAKE_SOURCE_DIR}
)
set(EXTERNAL_INCLUDE_DIRS
    include/external/pcg
    include/external/yaml
)

# ── Yaml as a static library (compiled once, shared by both targets) ──────────
add_library(yaml_lib STATIC include/external/yaml/Yaml.cpp)
target_include_directories(yaml_lib PUBLIC include/external/yaml)

# ── Shared PCH list ───────────────────────────────────────────────────────────
set(SHARED_PCH
    <vector>
    <span>
    <optional>
    <concepts>
    <string>
    <cstdint>
)

# ── Compile option sets ───────────────────────────────────────────────────────
# Release flags (used by the simulator)
set(RELEASE_FLAGS -O3 -march=native -mtune=native -fno-math-errno -fno-trapping-math)

# LTO only in Release builds — kills incremental compile time in Debug/dev
if(CMAKE_BUILD_TYPE STREQUAL "Release")
    list(APPEND RELEASE_FLAGS -flto)
    set(RELEASE_LINK_FLAGS -flto)
endif()

# All Includes file for intellisense
file(GLOB_RECURSE ALL_HEADERS
    RELATIVE "${CMAKE_SOURCE_DIR}"
    "${CMAKE_SOURCE_DIR}/include/*.hpp"
)

set(ALL_INCLUDES_FILE "${CMAKE_SOURCE_DIR}/src/all_includes.cpp")
file(WRITE ${ALL_INCLUDES_FILE} "// Auto-generated by CMake — do not edit\n")
foreach(HEADER ${ALL_HEADERS})
    file(APPEND ${ALL_INCLUDES_FILE} "#include \"${CMAKE_SOURCE_DIR}/${HEADER}\"\n")
endforeach()

# ── Main executable ───────────────────────────────────────────────────────────
add_executable(
    exch-sim 
    src/main.cpp 
    src/cli.cpp 
    src/sim_runner.cpp
    src/all_includes.cpp)

target_precompile_headers(exch-sim PRIVATE
    ${SHARED_PCH}
    <format>
)

target_include_directories(exch-sim PRIVATE ${CORE_INCLUDE_DIRS} strategy)
target_include_directories(exch-sim SYSTEM PRIVATE ${EXTERNAL_INCLUDE_DIRS})
target_link_libraries(exch-sim PRIVATE CLI11::CLI11 TBB::tbb yaml_lib)
target_compile_options(exch-sim PRIVATE ${RELEASE_FLAGS})
target_link_options(exch-sim PRIVATE ${RELEASE_LINK_FLAGS} -fuse-ld=mold)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# ── Tests ─────────────────────────────────────────────────────────────────────
# Reuse PCH from exch-sim — test files include the same headers
if(NOT CMAKE_BUILD_TYPE STREQUAL "Release")
    find_package(GTest REQUIRED)
    add_executable(tests
        tests/test_price_models.cpp
        tests/test_matching.cpp
        tests/test_maker.cpp
        tests/test_taker.cpp
        tests/test_simulator_run.cpp
        tests/test_strategy.cpp
    )
    target_precompile_headers(tests REUSE_FROM exch-sim)
    target_include_directories(tests PRIVATE ${CORE_INCLUDE_DIRS} strategy)
    target_include_directories(tests SYSTEM PRIVATE ${EXTERNAL_INCLUDE_DIRS})
    target_link_libraries(tests PRIVATE GTest::gtest_main CLI11::CLI11 yaml_lib)
    target_compile_options(tests PRIVATE -O3 -march=native -mtune=native -fno-math-errno -fno-trapping-math)

    enable_testing()
    add_test(NAME ALL_TESTS COMMAND tests)
endif()

